test/llvm/macros/complex-macro6.chpl
use SysCTypes;

extern const SHIFT_CONSTANT : c_int;
writeln("SHIFT_CONSTANT ", SHIFT_CONSTANT);
